--- a/src/main/resources/templates/owners/ownersList.html
+++ b/src/main/resources/templates/owners/ownersList.html
@@ -4,7 +4,7 @@
 
 <h1>ownerList 부분입니다</h1>
 <table>
-    <tr th:each="owner:${owner}">
+    <tr th:each="owner:${ownerList}">
        <td th:text="${owner.firstName}"></td>
        <td th:text="${owner.lastName}"></td>
        <td th:text="${owner.city}"></td>
